--- a/index.html
+++ b/index.html
@@ -1,44 +1,1 @@
-<!DOCTYPE html>
-<html lang="pt-br">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./style.css">
-    <script src="./script.js" defer></script>
-    <title>Jogo da Velha</title>
-</head>
-
-<body>
-    <header class="header">
-        <h1>Jogo da Velha</h1>
-        <p>Digite os nomes dos jogadores:</p>
-        <form id="jogadores">
-            <input class="input" type="text" id="jogador1" placeholder="Jogador 01">
-            VS
-            <input class="input" type="text" id="jogador2" placeholder="Jogador 02">
-        </form>
-    </header>
-
-    <div id="jogo">
-        <p id="mensagem"></p>
-        <div class="tabuleiro casa1" id="casa-0-0" onclick="vez(this)"></div>
-        <div class="tabuleiro casa2" id="casa-0-1" onclick="vez(this)"></div>
-        <div class="tabuleiro casa3" id="casa-0-2" onclick="vez(this)"></div>
-        <div class="tabuleiro casa4" id="casa-1-0" onclick="vez(this)"></div>
-        <div class="tabuleiro casa5" id="casa-1-1" onclick="vez(this)"></div>
-        <div class="tabuleiro casa6" id="casa-1-2" onclick="vez(this)"></div>
-        <div class="tabuleiro casa7" id="casa-2-0" onclick="vez(this)"></div>
-        <div class="tabuleiro casa8" id="casa-2-1" onclick="vez(this)"></div>
-        <div class="tabuleiro casa9" id="casa-2-2" onclick="vez(this)"></div>
-    </div>
-    <div id="reset">
-        <button onclick="reiniciar()">Reiniciar o Jogo</button>
-    </div>
-</body>
-
-</html>
+<!doctype html><html lang="pt-br"><head><meta charset="UTF-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet"><title>Jogo da Velha</title><script defer="defer" src="index.min.js"></script></head><body><header class="header"><h1>Jogo da Velha</h1><p>Digite os nomes dos jogadores:</p><form id="jogadores"><input class="input" id="jogador1" placeholder="Jogador 01"><div id="placar"></div><input class="input" id="jogador2" placeholder="Jogador 02"></form></header><div id="jogo"><p id="mensagem"></p><div class="tabuleiro casa1" id="casa-0-0"></div><div class="tabuleiro casa2" id="casa-0-1"></div><div class="tabuleiro casa3" id="casa-0-2"></div><div class="tabuleiro casa4" id="casa-1-0"></div><div class="tabuleiro casa5" id="casa-1-1"></div><div class="tabuleiro casa6" id="casa-1-2"></div><div class="tabuleiro casa7" id="casa-2-0"></div><div class="tabuleiro casa8" id="casa-2-1"></div><div class="tabuleiro casa9" id="casa-2-2"></div></div><div id="reset"><button id="reiniciar">Reiniciar o Jogo</button></div></body></html>
